[project]
name = "astrbot-plugin-nyxbot"
version = "1.0.0"
description = "astrbot的warframe助手插件，目标实现与nyxbot功能相同。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web / Network
    "aiohttp>=3.13.5",
    "httpx>=0.28.0",
    
    # Data / Serialization
    "orjson>=3.11.8",
    "pydantic>=2.0.0",
    
    # Database (Tortoise ORM with SQLite)
    "tortoise-orm>=0.24.0",
    
    # Image Processing
    "Pillow>=11.0.0",
    
    # Caching
    "cachetools>=5.5.0",
    
    # Scheduling
    "apscheduler>=3.11.0",
    
    # OCR (PaddleOCR / PP-OCRv5, CPU inference)
    "paddlepaddle>=3.0.0",
    "paddleocr>=2.9.0",
    
    # Utility
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]
